@@ -7,8 +7,12 @@ debian-installer-utils (1.19) UNRELEASED; urgency=low
     priority and the installation language.
   * Make in-target use chroot-setup.sh, so it can be used to run commands that
     install packages, like tasksel.
+  * Move the --ignore-time-conflict setting into a temporry apt.conf file
+    so it will also be used by commands run by in-target.
+  * Drop installation language code; locales are not set up and it's probably
+    not needed.
 
- -- Joey Hess <joeyh@debian.org>  Sun,  4 Dec 2005 15:03:39 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun,  4 Dec 2005 15:49:38 -0500
 
 debian-installer-utils (1.19) unstable; urgency=low
 
